# instruction-following-retrieval

./: .gitignore  README.md  log.txt  pyproject.toml
dataset/msmarco_with_scores/test/: state.json
dataset/msmarco_with_scores/train/: dataset_info.json  state.json
logs/: train-both-losses.txt  train-only-contrastiveloss.txt  train-only-ranklosss.txt
script/: 01-con-basic.sh  02-weight-v1.sh  03-weight-v2.sh  04-margin.sh  05-multi-gpu-con-basic.sh  05-multi-gpu.sh  06-multi-gpu-weight-v2.sh  eval-both-losses.sh  eval-only-rankloss.sh  internal.sh  train-both-losses.sh  train-only-contrastiveloss.sh  train-only-rankloss.sh
src/: .d0003578963_nodeinfo  IFIR.py  ifir.py  inference.py  mteb_eval.py  mteb_eval_custom.py  multi-gpu-train.py  multi-gpu.py  multiprocess_train.py  train-contrastive-rank-loss.py  train.py
src/config/: config.yaml  config_multi.yaml  ds_config.json
src/dataset/: __init__.py  dataset.py  msmarco.py  similarity.py
src/evaluation/: early_stop_callback.py  instructions.py  text_formatting_utils.py
src/evaluation2/utils/: constant.py  metrics.py  openai_utils.py
src/evaluation_IFIR/utils/: constant.py  dataset.py  embeddings.py  evaluator.py
src/loss/: contrastive_loss.py  hard_negative_loss.py  loss_utils.py  margin_loss.py  similarity_margin_loss.py  similarity_ranking_loss.py  tau_module.py  weighted_contrastive_loss.py
src/models/: __init__.py  bidirectional_llama.py  instract_ir_model.py
src/preprocess/: similarity.py
wandb/: latest-run
wandb/run-20250919_110145-68etvhx4/files/: config.yaml  wandb-metadata.json  (+1 more)
(+88 files in other folders)
