[project]
name = "instructir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "aiolimiter>=1.2.1",
    "angle-emb>=0.5.6",
    "datasets>=4.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-elasticsearch>=0.3.2",
    "mteb>=1.38.33",
    "openai>=1.101.0",
    "peft>=0.17.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers==4.45",
    "wandb>=0.21.1",
]
