[project]
name = "instructir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "deepspeed>=0.17.5",
    "hydra-core>=1.3.2",
    "mteb>=1.38.33",
    "peft>=0.17.0",
    "torch>=2.8.0",
    "transformers==4.45.0",
    "wandb>=0.21.1",
]
